broken layout fix

--- a/app/assets/stylesheets/store/shared/_layout.scss
+++ b/app/assets/stylesheets/store/shared/_layout.scss
@@ -114,7 +114,7 @@ body {
 }
 
 ul#products {
-  max-width: 600px;
+  max-width: 700px;
 }
 
 ul#products li {
